# Seidel

./: README.md
Artificial Data/: Artificialdata.txt  GaussDat2D_Amplitude500_center25x25_sigma_4x4_int.txt  GaussDat2D_amplitude50_40spots_sigma_4x4.txt  Generate Gauss Spots.ipynb
BenchmarkMatlabandPython FRC/: AnalyseIITimages.ipynb  MatlabFRC.txt
Benchmarks/BenchmarkGaussFit/: 20190318_AniFitPerformance.ipynb  Thumbs.db
Benchmarks/BenchmarkGaussFit_Suren/: GaussDat2D_spotLst.txt
Benchmarks/BenchmarkMatlabandPython FRC/: AnalyseIITimages.ipynb  Saveresults.mlx  pythonFRC.txt
Benchmarks/BenchmarkPtuReader/: 10micros_1.msr  10micros_1.ptu  Readme.txt.txt
Code/: AlignStructures.py  FRCfuncs.py  GaussAnalysisPipeline.py  GaussFits.cp37-win_amd64.pyd  GaussFits.pyd  ImageManipulation.py  LSManalysis.py  aid_functions.py  arcane.py  batchplot.py  confocalPbsa.py  cpp_wrappers.py  developmental_functions.py  findPeaksLib.py  fitDA.py  histogram_fitting.py  precisionFuncs.py  utility.py
Code/.ipynb_checkpoints/: FRC_develop-checkpoint.ipynb
Demo/: UsageDemo.ipynb
Demo/20211202/: allOverview_Pos_y-0.00287604_spot_0_x_188.0_y_62.0.ptu  allOverview_Pos_y-0.00289804_spot_0_x_-84.0_y_-155.0.ptu  allOverview_Pos_y-0.00289804_spot_1_x_-86.0_y_-154.0.ptu  allOverview_Pos_y-0.00292004_spot_1_x_-157.0_y_-50.0.ptu  allOverview_Pos_y-0.00292004_spot_2_x_-155.0_y_-49.0.ptu  allOverview_Pos_y-0.00292004_spot_3_x_-157.0_y_-47.0.ptu  allOverview_Pos_y-0.00294204_spot_0_x_43.0_y_191.0.ptu  allOverview_Pos_y-0.00294204_spot_1_x_41.0_y_192.0.ptu  allOverview_Pos_y-0.00294204_spot_2_x_47.0_y_192.0.ptu  allOverview_Pos_y-0.00296404_spot_0_x_151.0_y_-157.0.ptu  allOverview_Pos_y-0.00296404_spot_10_x_-26.0_y_-133.0.ptu  allOverview_Pos_y-0.00296404_spot_11_x_141.0_y_-113.0.ptu  allOverview_Pos_y-0.00296404_spot_12_x_140.0_y_-111.0.ptu  allOverview_Pos_y-0.00296404_spot_13_x_142.0_y_-111.0.ptu  allOverview_Pos_y-0.00296404_spot_14_x_152.0_y_64.0.ptu  allOverview_Pos_y-0.00296404_spot_24_x_-133.0_y_77.0.ptu  allOverview_Pos_y-0.00296404_spot_25_x_148.0_y_78.0.ptu  (+33 more)
Demo/analysis/: O(HF+NF).pg4  (+4 more)
analysisNotebooks/: 20190306 imgSizeSeries20nmCrimson.ipynb  20190306STED power series-20nmCrimson.ipynb  MF.tiff  Thumbs.db
dev/: FRC_develop.ipynb  ImageManipulation_dev-Copy1.ipynb  ImageManipulation_dev.ipynb  c_wrapper_develop.ipynb
dev/Fit2DGaussian/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  Fit2DGaussian.sln  Fit2DGaussian.vcxproj  Fit2DGaussian_NV.sln  Fit2DGaussian_NV.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  fit2DGaussian.cpp  fit2DGaussian.h  fits2x.vcproj  fits2x.vcxproj  hello_dynamic.vcxproj  hello_dynamic.vcxproj.filters  i_lbfgs.cpp  twoIstar.cpp  twoIstar1ch.cpp  twoIstar_main.cpp
dev/Fit2DGaussian/PythonApplication1/: Call_Gauss2D.pyproj  cpp_wrappers.py
dev/Fit2DGaussian/attic/: epsilon.cpp  fjac124.cpp
dev/Fit2DGaussian/attic/correction_20111206/: i_lbfgs.h  modelf.cpp
dev/Fit2DGaussian/correction_20111206/: fsconv2.c
dev/Fit2DGaussian/debree/: Fit2DGaussian_NV.vcxproj  fits2x.dsp  fits2x.dsw
dev/Fit2DGaussian/fit_Gauss2D/: fit_Gauss2D.vcxproj  fit_Gauss2D.vcxproj.filters
dev/Fit2DGaussian/src/: i_lbfgs.h  lbfgs.cpp
dev/Fit2DGaussian/src/libs/: ap.cpp
dev/Fit2DGaussian_fresh/: CMakeLists.txt
dev/Fit2DGaussian_fresh/include/: eigen_wrap.h  fit2DGaussian.h  i_lbfgs.h  pywrap.h  twoIstar.h
dev/Fit2DGaussian_fresh/src/: Errors.txt  bindings.cpp  eigen_wrap.cpp  eigen_wrap.h  fit2DGaussian.cpp  fit2DGaussian.h  pywrap.cpp  twoIstar.cpp
dev/Fit2DGaussian_fresh/test/: Benchmark Accuracy.ipynb  Thumbs.db  test_functions.ipynb
dev/imspy/: CMakeLists.txt
dev/imspy/include/: ProcessPhotonStream.h
dev/imspy/src/: .ProcessPhotonStream.cpp.swp  .bindings.cpp.swp  ProcessPhotonStream.cpp  bindings.cpp
dev/imspy/test/: test_PPT.py
dev/imspy/test/images/header/: PQSpcm_2019-02-01_15-59-23.txt
dev/readPTU/: CMakeLists.txt  PreLoad.cmake  ProcessPhotonStream.cpp  fout.txt  readPTU.ipynb  readptu.sln
dev/readPTU/.ipynb_checkpoints/: readPTU-checkpoint.ipynb
dev/readPTU/PQ_PTU_sf/: PQ_PTU.DSP  PQ_PTU.DSW  PQ_PTU.sln  PQ_PTU.vcproj  PQ_PTU.vcxproj  ptu.cpp  ptu.def  ptu_sf.cpp  ptudemo.cc
dev/readPTU/attic/: ptu_wrapper.py  readPTU.ipynb  run_PhStream.py
dev/readPTU/attic/.ipynb_checkpoints/: readPTU-checkpoint.ipynb
dev/readPTU/c/: ProcessPhotonStream.cpp  ProcessPhotonStream.filters  ProcessPhotonStream.vcxproj  Source.def
dev/readPTU/include/: .ProcessPhotonStream.h.swp  ProcessPhotonStream.h
dev/readPTU/python/: H+àHD$ H‰E  PyReadPTU.pyproj  ptu_wrapper.py  worksheet.py
dev/readPTU/src/: .ProcessPhotonStream.cpp.swp  .bindings.cpp.swp  ProcessPhotonStream.cpp  bindings.cpp
dev/sandbox/python_cpp_example/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  CMakeLists.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  math_lib.vcxproj  math_lib.vcxproj.filters  python_cpp_example.sln  python_cpp_example.vcxproj  python_cpp_example.vcxproj.filters  setup.py
dev/sandbox/python_cpp_example/lib/pybind11/docs/: Thumbs.db
dev/sandbox/python_cpp_example/src/python_cpp_example/: .rendered.bindings.cpp  bindings.cpp  hello.py  math.cpp  math.hpp
templates/: 20211103_template_v3.ipynb
tests/: LSMAnalysis_wmasks.py  test_LSMan.py  tests.py
(+304 files in other folders)
